# earendil-mrc26

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  run_docker.sh
src/earendil_bot/: package.xml  setup.py
src/earendil_bot/arduino/: engine.ino  lcd_1902a.ino  magnetometer.ino
src/earendil_bot/config/: hardware_params.yaml  test_params.yaml
src/earendil_bot/earendil_bot/: hardware_check.py
src/earendil_bot/earendil_bot/bridge/: hardware_bridge.py
src/earendil_bot/earendil_bot/gps/: gps_math.py  gps_node.py
src/earendil_bot/earendil_bot/manualteleop/: __init__.py  manualteleop.py  manuelteleop_noros.py
src/earendil_bot/earendil_bot/scripts/: __init__.py  aruco_detector.py  gps_nav_main.py  path_recorder.py  timed_nav_test.py
src/earendil_bot/earendil_bot/tests/: gps_nav_test.py  heading_test.py  standalone_aruco_lcd.py  timed_nav_test.py
src/earendil_bot/launch/: autonomous_mission.launch.py  test_return_mission.launch.py
