<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>earendil_bot</name>
  <version>0.4.0</version>
  <description>Autonomous navigation stack for Earendil Bot (MRC 2026).</description>
  <maintainer email="berkaypaksoy07@gmail.com">berkay</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 Temel Paket Bağımlılıkları -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Python Çalışma Zamanı Bağımlılıkları -->
  <exec_depend>python3-serial</exec_depend> 
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Test Bağımlılıkları -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
